<resources>
    <string name="app_name">ISBNApp</string>
    <string name="action_settings">Opcje</string>
    <string name="library">Twoja półka</string>
    <string name="logOut">Wyloguj</string>
    <string name="search_hint">Wpisz autora, tytuł lub ISBN</string>
    <string name="information_tab">Informacje</string>
    <string name="opinions_tab">Opinie</string>
    <string name="price_tab">Ceny</string>
    <string name="title">Tytuł</string>
    <string name="author">Autor</string>
    <string name="language">Język oryginału</string>
    <string name="year">Pierwsze wydanie</string>
    <string name="category">Kategoria</string>
    <string name="genre">Gatunek</string>
    <string name="form">Forma</string>
    <string name="publisher_note">Nota wydawcy</string>
    <string name="score">Oceny</string>
    <string name="read_on">Czytaj na </string>

    <string name="added_to_library">Książka została dodana do półki</string>

    <string name="ISBN_not_found">Numer ISBN nie został rozpoznany</string>
    <string name="ISBN_not_recognized">Nr ISBN nie został odczytany poprawnie</string>
    <string name="Cannot_open_photo">Brak dostępu do zdjęcia</string>
    <string name="error_photo">Nie można zrobić zdjęcia</string>
    <string name="hint_try_to_search_title">Spróbuj wpisać tytuł książki w wyszukiwarkę</string>
    <string name="hint_redo_photo">Spróbuj wykonać zdjęcie ponownie</string>
    <string name="hint_check_rights_to_open_photo">Sprawdź czy aplikacja ma dostęp do odczytu zdjęć (ustawienia)</string>
    <string name="read_on_biblionetka">Czytaj na BiblioNetka.pl</string>
    <string name="read_on_lubimyczytac">Czytaj na LubimyCzytac.pl</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Log in</string>
    <string name="btn_link_to_login">Log in</string>
    <string name="btn_link_to_register">Register</string>
    <string name="btn_register">Register</string>

</resources>
