<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="weeia.isbnapp.InformationFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/fab_margin"
        android:paddingRight="@dimen/fab_margin"
        android:paddingTop="@dimen/fab_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="253dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/wszystkiewojny" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/fab_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/title"/>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Wszystkie wojny Lary"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="?android:attr/textColorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/author_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/author"/>

                <TextView
                    android:id="@+id/author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Wojciech Jagielski"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="?android:attr/textColorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/language_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/language"/>

                <TextView
                    android:id="@+id/book_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="polski"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="?android:attr/textColorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/year_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/year" />

                <TextView
                    android:id="@+id/year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2015"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="?android:attr/textColorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/category_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/category" />

                <TextView
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Literatura piękna"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="?android:attr/textColorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/genre_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/genre" />

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="literatura faktu"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="?android:attr/textColorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/form_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/form" />

                <TextView
                    android:id="@+id/form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="reportaż / zbiór reportaży"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="?android:attr/textColorPrimary" />

            </LinearLayout>

            <TextView
                android:id="@+id/publisher_note_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publisher_note"
                android:paddingTop="@dimen/fab_margin"/>

            <TextView
                android:id="@+id/publisher_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Opowieści słuchamy z ust Lary. Jej synowie, gruzińscy Czeczeni, ruszają do Polski. Tutaj Szamil i Raszid zostają Europejczykami. Potem wyjeżdżają dalej na Zachód, gdzie zakładają rodziny. Po latach europejski raj zaczyna ich jednak przerażać obcością i duchową pustką. Wciąga ich święta wojna – wojna o wartości ich zdaniem największe. Tak trafiają do Syrii…Lara wciąż walczy o to, by wrócili do domu.
Pozornie oderwane od siebie strony świata – „kontynent rosyjski” z jego strefą wpływów oraz bliskowschodni kalifat – okazują się ściśle związane. Wojciech Jagielski opisuje, jak na ich styku rodzi się fundamentalizm. Tak wygląda świat, kiedy wojna przychodzi do naszego domu.
To kolejna po „Nocnych wędrowcach” i „Wypalaniu traw” wciągająca opowieść, której sens wykracza poza wydarzenia w niej opisywane i która pozbawia nas komfortu stereotypowego myślenia.
[Znak, 2015]"
                android:textColor="?android:attr/textColorPrimary" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
